[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Controllers/CollisionBoxes/HitBox.tscn" type="PackedScene" id=2]

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.96046e-08, -5.96046e-08 )
scale = Vector2( 0.525, 0.425 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 2 )]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
